Use toList here
This is just a trivial tidiness nitpick.